# cmdspace-class-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  _Project.md  git-switch.sh  pyproject.toml  requirements.txt  run.command
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
01_Log/: 20241214-0033_claude_implementation_complete.md  20241214-0058_claude_project_planning.md
01_publ 회원 및 주문 관리 자동화/: .env.example  CHANGELOG.md  README.md  settings.yaml  settings.yaml.example
01_publ 회원 및 주문 관리 자동화/.claude/: CLAUDE.md
01_publ 회원 및 주문 관리 자동화/docs/: SESSION_LOG_20241230.md  SESSION_LOG_20260101.md  SYSTEM_DESIGN.md
01_publ 회원 및 주문 관리 자동화/src/: airtable_syncer.py  config.py  downloader.py  logger.py  main.py  utils.py
01_publ 회원 및 주문 관리 자동화/src/airtable/: client.py  records.py  schema.py  validators.py
01_publ 회원 및 주문 관리 자동화/tests/: conftest.py  test_csv_reader.py  test_records.py  test_utils.py  test_validators.py
02_결제확인서 양식 만들기/: convert-to-pdf.js  convert-to-pdf.py  package-lock.json  package.json  payment_confirmation_bilingual_v0.5.html
02_결제확인서 양식 만들기/.claude/: CLAUDE.md
02_결제확인서 양식 만들기/99_Archive/: payment_confirmation.html  payment_confirmation_bilingual.html  payment_confirmation_bilingual_v0.2.html  payment_confirmation_bilingual_v0.3.html  payment_confirmation_bilingual_v0.4.html
03_결제확인서 발급 사이트/: .env.local.example  README.md  _Project.md  package-lock.json  package.json
03_결제확인서 발급 사이트/src/app/: layout.tsx  page.tsx
03_결제확인서 발급 사이트/src/components/: PaymentVerificationForm.tsx  ResultDisplay.tsx
03_결제확인서 발급 사이트/src/lib/: airtable.ts  document-number.ts
03_결제확인서 발급 사이트/src/types/: index.ts
04_결제확인서 생성/: DEVELOPMENT.md  _Project.md
04_결제확인서 생성/.claude/: CLAUDE.md
05_이메일 자동발송하기/: .env.example  .gitignore  README.md  _Project.md  package-lock.json  package.json
05_이메일 자동발송하기/.claude/: CLAUDE.md
05_이메일 자동발송하기/docs/research/: 01_API_이메일_서비스_비교.md  02_한국_이메일_서비스.md  03_노코드_자동화_도구.md  04_직접_구축_가이드.md  이메일_자동화_시스템_가이드.md
05_이메일 자동발송하기/src/: index.ts  send-email.ts  types.ts
99_Archive/12-update-publ-data-to-database/update-publ-data-to-database_v1/: .gitignore  README.md
99_Archive/14_publ-data-manager-RoR_20251219/.claude/: CLAUDE.md
99_Archive/14_publ-data-manager-RoR_20251219/01_Log/: 20251216-1126_AI_데이터동기화_SyncDataJob_오류수정.md  20251218_AI_데이터동기화_세션만료_오류수정.md
99_Archive/15_publ-data-manager_v2/.claude/: settings.json
99_Archive/15_publ-data-manager_v2/10_Log/: 20251225_AI_Airtable_테이블_설정_완료.md  20251225_AI_publ_data_manager_v2_기획.md  20251226_AI_Codebase_정리_계획.md  20251226_AI_Database_구조_정리.md
docs/: CHANGELOG.md  CODE_STYLE.md  DEVELOPMENT.md  OPERATION_GUIDE.md  SYSTEM_DESIGN.md
projects to merge/get-publ-data_v5/: .gitignore  download_all.py  download_members.py  download_orders_first_page.py  download_refunds.py  publ 데이터 다운로드.command  recon.py
src/: __init__.py  airtable_syncer.py  config.py  data_analyzer.py  downloader.py  main.py  syncer.py  utils.py
src/airtable/: __init__.py  csv_reader.py  history.py  maintenance.py  records.py  schema.py
tests/: __init__.py
(+42 files in other folders)
